tests/snapshots/test__generate_and_read_pdb_from_yaml@dummy2_tpi.snap
---
source: tests/test.rs
expression: tpi.records()
---
[
    ArgList {
        count: 0,
        arg_list: [],
    },
]
