tests/snapshots/test__generate_and_read_pdb_from_yaml@dummy_ipi.snap
---
source: tests/test.rs
expression: ipi.records()
---
[
    FuncId {
        parent_scope: None,
        function_type: TypeIndex(
            4096,
        ),
        name: StrBuf(
            "main",
        ),
    },
]
