tests/snapshots/test__tpi@dummy.yaml.snap
---
source: tests/test.rs
expression: "pdb.get_tpi().expect(\"failed to get tpi\").records()"
input_file: tests/fixtures/dummy.yaml
---
[
    ArgList {
        count: 1,
        arg_list: [
            1234,
        ],
    },
]
